ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: google-shop-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /electronics
        pathType: Prefix
        backend:
          service:
            name: electronics-service
            port:
              number: 80
      - path: /phones
        pathType: Prefix
        backend:
          service:
            name: phones-service
            port:
              number: 80
      - path: /computers
        pathType: Prefix
        backend:
          service:
            name: computers-service
            port:
              number: 80
      - path: /earphones
        pathType: Prefix
        backend:
          service:
            name: earphones-service
            port:
              number: 80
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: main-frontend-service
            port:
              number: 80
